--- a/.github/workflows/pr_danger.yml
+++ b/.github/workflows/pr_danger.yml
@@ -11,6 +11,15 @@ jobs:
         runs-on: macos-latest
         steps:
             -   uses: actions/checkout@v2
+            -   name: Read secrets from AWS Secrets Manager into environment variables
+                uses: abhilash1in/aws-secrets-manager-action@v1.0.1
+                with:
+                    aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                    aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                    aws-region: us-east-1
+                    secrets: |
+                        beagle/core/*
+                    parse-json: true
 
             # Gems for Fastlane
             -   name: Cache ruby gems dependencies
@@ -23,9 +32,8 @@ jobs:
                     restore-keys: ${{ env.keyPath }}
             -   name: Install gem dependencies
                 run: bundle config set path '~/.gem' && bundle install
-                
             -   name: Run danger check
                 env:
-                  GITHUB_USER: ${{ secrets.NAME_REPO_TOKEN }}
-                  GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
+                    GITHUB_USER: ${{ env.BEAGLE_CORE_GITHUB_GITHUB_USER }}
+                    GITHUB_TOKEN: ${{ env.BEAGLE_CORE_GITHUB_GITHUB_TOKEN }}
                 run:  '[ ! -z $GITHUB_TOKEN ] && bundle exec fastlane run_danger danger_id:"pr_danger" danger_file_path:"pr" || echo "Skipping Danger for External Contributor"'
