--- a/.github/workflows/automated_tests_appium_ios.yml
+++ b/.github/workflows/automated_tests_appium_ios.yml
@@ -87,18 +87,16 @@ jobs:
 
       - name: Prepare iOS 13.5 simulator
         run: |
-          #sudo mkdir -p /Library/Developer/CoreSimulator/Profiles/Runtimes
+          sudo mkdir -p /Library/Developer/CoreSimulator/Profiles/Runtimes
           ## We use simulator 13.5 for the tests. It uses Xcode 11.5, according to https://github.com/actions/virtual-environments/blob/main/images/macos/macos-10.15-Readme.md.
           ## Since GitHub Actions uses another Xcode version, we need to make a symlink inside Xcode, pointing to the iOS version we want.
           ## More details: https://github.com/actions/virtual-environments/issues/551#issuecomment-637344435
-          #sudo ln -s /Applications/Xcode_11.5.app/Contents/Developer/Platforms/iPhoneOS.platform/Library/Developer/CoreSimulator/Profiles/Runtimes/iOS.simruntime /Library/Developer/CoreSimulator/Profiles/Runtimes/iOS\ 13.5.simruntime
-          #xcrun simctl create TestiPhoneX com.apple.CoreSimulator.SimDeviceType.iPhone-11 com.apple.CoreSimulator.SimRuntime.iOS-13-5 > ~/deviceIdTemp.txt
-          #DEVICEUUID=`cat ~/deviceIdTemp.txt`
-          #xcrun simctl boot $DEVICEUUID
-          #sleep 30
+          sudo ln -s /Applications/Xcode_11.5.app/Contents/Developer/Platforms/iPhoneOS.platform/Library/Developer/CoreSimulator/Profiles/Runtimes/iOS.simruntime /Library/Developer/CoreSimulator/Profiles/Runtimes/iOS\ 13.5.simruntime
+          xcrun simctl create TestiPhoneX com.apple.CoreSimulator.SimDeviceType.iPhone-11 com.apple.CoreSimulator.SimRuntime.iOS-13-5 > ~/deviceIdTemp.txt
+          DEVICEUUID=`cat ~/deviceIdTemp.txt`
+          xcrun simctl boot $DEVICEUUID
+          sleep 30
           xcrun simctl list
-          # Boots simulator with iPhone 11 (E387E3DB-87ED-4005-B890-73FD5FE1DDA3)
-          xcrun simctl boot E387E3DB-87ED-4005-B890-73FD5FE1DDA3
 
       ##################################################################################################
       # Emulator config - end
