--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -3,5 +3,5 @@ CODEOWNERS
 
 android/  @tuliopereirazup @hernandazevedozup @matheusribeirozup @uziasferreirazup @hthemir @danilorochazup @jefersonlopeszup @tarcisiogc @paulomeurerzup @gabrielleonardozup @carlossteinzup @viniciusguardieirozup @luisoliveirazup @jenifersantoszup
 iOS/ @theffc @dantes-git @victormr @yandiaszup @gmarson @lucasaraujo @tarcisiogc @lucasfonsecazup @luisgustavozup @joaoabreuzup @victorrabelozup
-backend/  @tarcisiogc @LG95 @ze12augusto @adautopaulazup @tuliopereirazup @hernandazevedozup @matheusribeirozup @uziasferreirazup @hthemir @danilorochazup @jefersonlopeszup @Tiagoperes
+backend/  @tarcisiogc @LG95 @ze12augusto @adautopaulazup @tuliopereirazup @hernandazevedozup @matheusribeirozup @uziasferreirazup @hthemir @danilorochazup @jefersonlopeszup @Tiagoperes @paulomeurerzup
 flutter/  @tarcisiogc @tuliopereirazup @matheusribeirozup @uziasferreirazup @dantes-git @gmarson @paulomeurerzup @gabrielleonardozup @theffc @dantes-git @Tiagoperes @igorgiumellizup
