--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,7 +1,7 @@
 CODEOWNERS
-*         @dantes-git @gabcoelho @pedropnaves @tarcisiogc @tuliopereirazup @hernandazevedozup @matheusribeirozup @hthemir @danilorochazup @ze12augusto @LG95 @theffc @victormr @yandiaszup @gmarson @uziasferreirazup @lucasaraujo @jefersonlopeszup @paulomeurerzup @adautopaulazup @gabrielleonardozup @victorrabelozup @lucasfonsecazup @carlossteinzup @viniciusguardieirozup @luisgustavozup @luisoliveirazup @joaoabreuzup @jenifersantoszup @tiagoperes
+*         @dantes-git @pedropnaves @tarcisiogc @tuliopereirazup @hernandazevedozup @matheusribeirozup @hthemir @danilorochazup @ze12augusto @LG95 @theffc @victormr @yandiaszup @gmarson @uziasferreirazup @lucasaraujo @jefersonlopeszup @paulomeurerzup @adautopaulazup @gabrielleonardozup @victorrabelozup @lucasfonsecazup @carlossteinzup @viniciusguardieirozup @luisgustavozup @luisoliveirazup @joaoabreuzup @jenifersantoszup @tiagoperes
 
 android/  @tuliopereirazup @hernandazevedozup @matheusribeirozup @uziasferreirazup @hthemir @danilorochazup @jefersonlopeszup @tarcisiogc @paulomeurerzup @gabrielleonardozup @carlossteinzup @viniciusguardieirozup @luisoliveirazup @jenifersantoszup
-iOS/ @theffc @gabcoelho @dantes-git @victormr @yandiaszup @gmarson @lucasaraujo @tarcisiogc @lucasfonsecazup @luisgustavozup @joaoabreuzup @victorrabelozup
-backend/  @tarcisiogc @LG95 @ze12augusto @adautopaulazup @tuliopereirazup @hernandazevedozup @matheusribeirozup @uziasferreirazup @hthemir @danilorochazup @jefersonlopeszup @Tiagoperes
-flutter/  @tarcisiogc @tuliopereirazup @matheusribeirozup @uziasferreirazup @dantes-git @gmarson @paulomeurerzup @gabrielleonardozup @theffc @gabcoelho @dantes-git @Tiagoperes @igorgiumellizup
+iOS/ @theffc @dantes-git @victormr @yandiaszup @gmarson @lucasaraujo @tarcisiogc @lucasfonsecazup @luisgustavozup @joaoabreuzup @victorrabelozup
+backend/  @tarcisiogc @LG95 @ze12augusto @adautopaulazup @tuliopereirazup @hernandazevedozup @matheusribeirozup @uziasferreirazup @hthemir @danilorochazup @jefersonlopeszup @Tiagoperes @paulomeurerzup
+flutter/  @tarcisiogc @tuliopereirazup @matheusribeirozup @uziasferreirazup @dantes-git @gmarson @paulomeurerzup @gabrielleonardozup @theffc @dantes-git @Tiagoperes @igorgiumellizup
