--- a/tests/appium/app-android/app/build.gradle
+++ b/tests/appium/app-android/app/build.gradle
@@ -52,6 +52,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    ndkVersion '23.0.7123448 rc1'
 }
 
 
