fix: run BFF on custom branch (#1579)
* Fix script to run BFF from custom branch

It was always considering master branch

* Update .github/workflows/automated_tests_appium_android.yml

Co-authored-by: Luiz Gustavo Gomes Borges <luiz.borges@zup.com.br>

Co-authored-by: Luiz Gustavo Gomes Borges <luiz.borges@zup.com.br>

--- a/.github/workflows/automated_tests_appium_android.yml
+++ b/.github/workflows/automated_tests_appium_android.yml
@@ -72,7 +72,7 @@ jobs:
         run: bash ./fastlane/automatedTests/deploy_test_backend.sh
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          VERSION: ${{ github.sha }}
+          VERSION: ${{ github.event.workflow_run.head_sha }}
           CLUSTER: ${{ env.BEAGLE_CORE_AWS_AWS_CLUSTER_NAME }}
           NAMESPACE: ${{ env.BEAGLE_CORE_AWS_AWS_CLUSTER_NAMESPACE }}
 
@@ -127,4 +127,3 @@ jobs:
         with:
           name: failed_tests_screenshots
           path: tests/appium/project/build/screenshots/
-
