--- a/.github/workflows/automated_tests_appium_ios.yml
+++ b/.github/workflows/automated_tests_appium_ios.yml
@@ -17,9 +17,9 @@
 name: Beagle Appium iOS Tests
 
 on:
-  workflow_dispatch
+  workflow_dispatch:
   workflow_run:
-    workflows: ["Beagle Appium Tests"]
+    workflows: ["Beagle Appium tests trigger"]
     types:
       - completed
 
