--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,8 +28,8 @@ jobs:
               env:
                 REPO_TOKEN: ${{ env.BEAGLE_CORE_GITHUB_GITHUB_TOKEN }}
                 NAME_REPO_TOKEN: ${{ env.BEAGLE_CORE_GITHUB_GITHUB_USER }}
-                SONATYPE_NEXUS_USERNAME: ${{ env.BEAGLE_CORE_ARTIFACT_SONATYPE_NEXUS_USERNAME }}
-                SONATYPE_NEXUS_PASSWORD: ${{ env.BEAGLE_CORE_ARTIFACT_SONATYPE_NEXUS_PASSWORD }}
+                ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ env.BEAGLE_CORE_ARTIFACT_SONATYPE_NEXUS_USERNAME }}
+                ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ env.BEAGLE_CORE_ARTIFACT_SONATYPE_NEXUS_PASSWORD }}
                 GPG_KEY_CONTENTS: ${{ env.BEAGLE_CORE_ARTIFACT_GPG_KEY_CONTENTS }}
                 ORG_GRADLE_PROJECT_SIGNINGKEYID: ${{ env.BEAGLE_CORE_ARTIFACT_ORG_GRADLE_PROJECT_SIGNINGKEYID }}
                 ORG_GRADLE_PROJECT_SIGNINGPASSWORD: ${{ env.BEAGLE_CORE_ARTIFACT_ORG_GRADLE_PROJECT_SIGNINGPASSWORD }}
