--- a/android/beagle/build.gradle
+++ b/android/beagle/build.gradle
@@ -18,9 +18,9 @@ import br.com.zup.beagle.Dependencies
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'de.mannodermaus.android-junit5'
+apply plugin: 'kotlin-parcelize'
 
 android {
     compileSdkVersion Dependencies.Versions.compileSdk
@@ -63,6 +63,10 @@ android {
         unitTests.all {
             useJUnitPlatform()
         }
+    }
+
+    buildFeatures {
+        viewBinding true
     }
 
 }
