--- a/android/sample/build.gradle
+++ b/android/sample/build.gradle
@@ -18,7 +18,6 @@ import br.com.zup.beagle.Dependencies
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
@@ -57,6 +56,10 @@ android {
 
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8
+    }
+
+    buildFeatures {
+        viewBinding true
     }
 }
 
