--- a/android/android-annotation/build.gradle
+++ b/android/android-annotation/build.gradle
@@ -17,6 +17,7 @@
 import br.com.zup.beagle.Dependencies
 
 apply plugin: 'kotlin'
+apply plugin: "org.jetbrains.dokka"
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
