--- a/android/build.gradle
+++ b/android/build.gradle
@@ -31,13 +31,14 @@ plugins {
     id "io.gitlab.arturbosch.detekt" version "1.17.1"
     id "com.github.ben-manes.versions" version "0.33.0"
     id "br.com.zup.beagle.dependencies"
-    id "org.jetbrains.dokka" version "1.4.20"
+    id "org.jetbrains.dokka" version "1.4.32"
 }
 
 allprojects {
     apply from: "$rootDir/../detekt.gradle"
 
     apply plugin: "br.com.zup.beagle.dependencies"
+    apply plugin: "org.jetbrains.dokka"
 
     repositories {
         google()
