--- a/backend/framework/build.gradle
+++ b/backend/framework/build.gradle
@@ -16,6 +16,8 @@
 
 import br.com.zup.beagle.Dependencies
 
+apply plugin: "org.jetbrains.dokka"
+
 dependencies {
     implementation Dependencies.GeneralLibraries.jacksonKotlin
     implementation Dependencies.BackendLibraries.guava
