--- a/backend/kotlin-core/build.gradle
+++ b/backend/kotlin-core/build.gradle
@@ -16,6 +16,7 @@
 
 import br.com.zup.beagle.Dependencies
 
+apply plugin: "org.jetbrains.dokka"
 apply from: rootProject.file('../maven-publish.gradle')
 
 test {
