--- a/android/build.gradle
+++ b/android/build.gradle
@@ -47,6 +47,16 @@ allprojects {
         google()
         mavenCentral()
     }
+
+    // temporary solution to all libraries updated to the last version of kotlin
+    configurations.all {
+        resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+            def requested = details.requested
+            if (requested.group == 'org.jetbrains.kotlin' && requested.name == 'kotlin-reflect') {
+                details.useVersion Dependencies.Versions.kotlin
+            }
+        }
+    }
 }
 
 task clean(type: Delete) {
