--- a/tests/appium/app-android/app/build.gradle
+++ b/tests/appium/app-android/app/build.gradle
@@ -19,6 +19,7 @@ import br.com.zup.beagle.Dependencies
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileOptions {
