:sparkles: Adds jacoco
Signed-off-by: Hernand Azevedo <hernand.azevedo@zup.com.br>

--- a/backend/starters/micronaut/build.gradle
+++ b/backend/starters/micronaut/build.gradle
@@ -18,6 +18,7 @@ import br.com.zup.beagle.Dependencies
 
 apply plugin: "org.jetbrains.dokka"
 apply plugin: 'kotlin-kapt'
+apply from: rootProject.file('../jacoco.gradle')
 
 dependencies {
     implementation Dependencies.GeneralLibraries.kotlinReflect
