--- a/android/beagle/build.gradle
+++ b/android/beagle/build.gradle
@@ -22,6 +22,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'de.mannodermaus.android-junit5'
 apply plugin: 'kotlin-parcelize'
 apply plugin: "org.jetbrains.dokka"
+apply from: rootProject.file('jacoco-android.gradle')
 
 android {
     compileSdkVersion Dependencies.Versions.compileSdk
