--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,6 +26,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10"
         classpath "com.vanniktech:gradle-maven-publish-plugin:0.15.1"
         classpath "de.mannodermaus.gradle.plugins:android-junit5:1.6.2.0"
+        classpath "com.hiya:jacoco-android:0.2"
     }
 }
 
