--- a/android/jacoco-android.gradle
+++ b/android/jacoco-android.gradle
@@ -14,17 +14,15 @@
  * limitations under the License.
  */
 
-import br.com.zup.beagle.Dependencies
+apply plugin: 'com.hiya.jacoco-android'
 
-apply plugin: 'kotlin'
-apply from: "$rootDir/../jacoco.gradle"
-
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
-
-dependencies {
-    implementation Dependencies.ProcessorLibraries.kotlinPoet
-    implementation project(Dependencies.Modules.androidAnnotation)
+jacoco {
+    toolVersion = '0.8.5'
 }
 
-apply from: new File('./../../maven-publish.gradle')
+jacocoAndroidUnitTestReport {
+
+    csv.enabled false
+    html.enabled true
+    xml.enabled true
+}
