--- a/backend/processor/build.gradle
+++ b/backend/processor/build.gradle
@@ -17,6 +17,7 @@
 import br.com.zup.beagle.Dependencies
 
 apply plugin: 'kotlin-kapt'
+apply from: rootProject.file('../jacoco.gradle')
 
 dependencies {
     implementation Dependencies.GeneralLibraries.kotlinPoet
