:bug: Fixes coverage zero by removing the testCoverageEnabled property
Signed-off-by: Hernand Azevedo <hernand.azevedo@zup.com.br>

--- a/backend/kotlin-core/build.gradle
+++ b/backend/kotlin-core/build.gradle
@@ -18,6 +18,7 @@ import br.com.zup.beagle.Dependencies
 
 apply plugin: "org.jetbrains.dokka"
 apply from: rootProject.file('../maven-publish.gradle')
+apply from: rootProject.file('../jacoco.gradle')
 
 test {
     useJUnitPlatform()
