--- a/backend/widgets-dsl/build.gradle
+++ b/backend/widgets-dsl/build.gradle
@@ -15,7 +15,7 @@
  */
 
 import br.com.zup.beagle.Dependencies
-
+apply from: rootProject.file('../jacoco.gradle')
 dependencies {
     api project(Dependencies.Modules.widgets)
 }
