--- a/.github/workflows/android-pr.yml
+++ b/.github/workflows/android-pr.yml
@@ -51,6 +51,12 @@ jobs:
                     path: ${{ env.gradle-path }}
                     key: ${{ runner.os }}-build-${{ env.gradle-cache-key }}-${{ hashFiles('android/buildSrc/**') }}
                     restore-keys: ${{ runner.os }}-build-${{ env.gradle-cache-key }}
+            - name: Setup JDK (8)
+              uses: actions/setup-java@v2
+              with:
+                    distribution: 'adopt'
+                    java-version: '8'
+            - run: java -cp java HelloWorldApp
             -   name: Run pr check
                 env:
                     GITHUB_USER: ${{ env.BEAGLE_CORE_GITHUB_GITHUB_USER }}
