:wrench: Fixing performance for tests
Signed-off-by: Hernand Azevedo <hernand.azevedo@zup.com.br>

--- a/backend/framework/build.gradle
+++ b/backend/framework/build.gradle
@@ -17,7 +17,7 @@
 import br.com.zup.beagle.Dependencies
 
 apply plugin: "org.jetbrains.dokka"
-apply from: rootProject.file('../jacoco.gradle')
+apply from: "$rootDir/../jacoco.gradle"
 
 dependencies {
     implementation Dependencies.GeneralLibraries.jacksonKotlin
