--- a/backend/kotlin-core/build.gradle
+++ b/backend/kotlin-core/build.gradle
@@ -18,7 +18,7 @@ import br.com.zup.beagle.Dependencies
 
 apply plugin: "org.jetbrains.dokka"
 apply from: rootProject.file('../maven-publish.gradle')
-apply from: rootProject.file('../jacoco.gradle')
+apply from: "$rootDir/../jacoco.gradle"
 
 test {
     useJUnitPlatform()
