--- a/backend/widgets/build.gradle
+++ b/backend/widgets/build.gradle
@@ -15,7 +15,7 @@
  */
 
 apply plugin: "org.jetbrains.dokka"
-apply from: rootProject.file('../jacoco.gradle')
+apply from: "$rootDir/../jacoco.gradle"
 
 import br.com.zup.beagle.Dependencies
 
