feat: Adds jacoco (#1621)
* :sparkles: Adds jacoco

Signed-off-by: Hernand Azevedo <hernand.azevedo@zup.com.br>

* :sparkles: Adds jacoco for backend

Signed-off-by: Hernand Azevedo <hernand.azevedo@zup.com.br>

* :wrench: Improve configuration for jacoco android

* :bug: Fixes coverage zero by removing the testCoverageEnabled property

Signed-off-by: Hernand Azevedo <hernand.azevedo@zup.com.br>

* :wrench: Improves time for testing workflow

Signed-off-by: Hernand Azevedo <hernand.azevedo@zup.com.br>

* :wrench: Adds jdk8 action

Signed-off-by: Hernand Azevedo <hernand.azevedo@zup.com.br>

* :wrench: Adds jdk8 action

Signed-off-by: Hernand Azevedo <hernand.azevedo@zup.com.br>

* :wrench: Adds jdk8 action

Signed-off-by: Hernand Azevedo <hernand.azevedo@zup.com.br>

* :wrench: Fixing performance for tests

Signed-off-by: Hernand Azevedo <hernand.azevedo@zup.com.br>

* :wrench: Fixing performance for tests

Signed-off-by: Hernand Azevedo <hernand.azevedo@zup.com.br>

* :wrench: Fixing performance for tests

Signed-off-by: Hernand Azevedo <hernand.azevedo@zup.com.br>

* :wrench: TESTING FALSE TEST

Signed-off-by: Hernand Azevedo <hernand.azevedo@zup.com.br>

* :wrench: TESTING FALSE TEST

Signed-off-by: Hernand Azevedo <hernand.azevedo@zup.com.br>

* :wrench: Testing success

Signed-off-by: Hernand Azevedo <hernand.azevedo@zup.com.br>

* :wrench: Rename coverage task

Signed-off-by: Hernand Azevedo <hernand.azevedo@zup.com.br>

* :wrench: Rename coverage task

Signed-off-by: Hernand Azevedo <hernand.azevedo@zup.com.br>

--- a/android/beagle/build.gradle
+++ b/android/beagle/build.gradle
@@ -22,6 +22,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'de.mannodermaus.android-junit5'
 apply plugin: 'kotlin-parcelize'
 apply plugin: "org.jetbrains.dokka"
+apply from: "$rootDir/jacoco-android.gradle"
 
 android {
     compileSdkVersion Dependencies.Versions.compileSdk
@@ -40,9 +41,6 @@ android {
     }
 
     buildTypes {
-        debug {
-            testCoverageEnabled true
-        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
