--- a/android/processor-shared-code/build.gradle
+++ b/android/processor-shared-code/build.gradle
@@ -17,6 +17,7 @@
 import br.com.zup.beagle.Dependencies
 
 apply plugin: 'kotlin'
+apply from: "$rootDir/../jacoco.gradle"
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
