--- a/backend/starters/spring/build.gradle
+++ b/backend/starters/spring/build.gradle
@@ -17,6 +17,7 @@
 import br.com.zup.beagle.Dependencies
 
 apply plugin: "org.jetbrains.dokka"
+apply from: "$rootDir/../jacoco.gradle"
 
 dependencies {
     implementation Dependencies.SpringLibraries.autoconfigure
