--- a/android/build.gradle
+++ b/android/build.gradle
@@ -69,16 +69,21 @@ allprojects {
                 property "sonar.projectName", "ZupIT_beagle_android"
                 property "sonar.organization", "t64zgssdey"
                 property "sonar.host.url", "https://sonarcloud.io"
+                property "detekt.sonar.kotlin.config.path", "$rootDir/../config/detekt-default-config.yml"
+                property "sonar.java.binaries", "build/classes,build/tmp/kotlin-classes"
+                property "sonar.tests", "."
+                property "sonar.java.coveragePlugin", "jacoco"
+                property "sonar.jacoco.reportPaths", "build/jacoco/testDebugUnitTest.exec,build/jacoco/test.exec"
 
 
-                sonar.sources=.
-                sonar.projectKey=pos-android-service-container
-                detekt.sonar.kotlin.config.path="$rootDir/../config/detekt-default-config.yml"
-                sonar.java.binaries=target/classes,kotlin-sdk/build/tmp/kotlin-classes
-                sonar.sources=database/src/main/kotlin
-                sonar.tests=database/src/test/kotlin
-                sonar.java.coveragePlugin=jacoco
-                sonar.jacoco.reportPaths=database/build/jacoco/testDebugUnitTest.exec
+//                sonar.sources=.
+//                sonar.projectKey=pos-android-service-container
+//                detekt.sonar.kotlin.config.path="$rootDir/../config/detekt-default-config.yml"
+//                sonar.java.binaries=target/classes,kotlin-sdk/build/tmp/kotlin-classes
+//                sonar.sources=database/src/main/kotlin
+//                sonar.tests=database/src/test/kotlin
+//                sonar.java.coveragePlugin=jacoco
+//                sonar.jacoco.reportPaths=database/build/jacoco/testDebugUnitTest.exec
             }
         }
     }
