refactor: refactored serialization tests
Signed-off-by: Paulo Cesar Meurer <paulo.meurer@zup.com.br>

--- a/android/beagle/build.gradle
+++ b/android/beagle/build.gradle
@@ -104,6 +104,7 @@ dependencies {
 
     testImplementation Dependencies.TestLibraries.junitApi
     testImplementation Dependencies.TestLibraries.junitEngine
+    testImplementation Dependencies.TestLibraries.junitParams
     testImplementation Dependencies.TestLibraries.junit4
     testImplementation Dependencies.TestLibraries.junitVintageEngine
 
