--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -67,7 +67,7 @@ allprojects {
                 property "sonar.projectName", "ZupIT_beagle_backend"
                 property "sonar.organization", "t64zgssdey"
                 property "sonar.host.url", "https://sonarcloud.io"
-                property "sonar.exclusions", "sample/**, test/**, annotation/**, widgets-dsl/**, automated-tests/**, processor-utils/**"
+                property "sonar.exclusions", "sample/**, test/**, annotation/**, widgets-dsl/**, automated-tests/**"
                 property "detekt.sonar.kotlin.config.path", "$rootDir/../config/detekt-default-config.yml"
                 property "sonar.java.coveragePlugin", "jacoco"
                 property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/jacocoTestReportDebug/jacocoTestReportDebug.xml"
