--- a/.github/workflows/backend-pr.yml
+++ b/.github/workflows/backend-pr.yml
@@ -51,11 +51,9 @@ jobs:
                     path: ${{ env.gradle-path }}
                     key: ${{ runner.os }}-build-${{ env.gradle-cache-key }}-${{ hashFiles('backend/buildSrc/**') }}
                     restore-keys: ${{ runner.os }}-build-${{ env.gradle-cache-key }}
-            -   uses: actions/setup-java@v2
-                with:
-                    distribution: 'adopt'
-                    java-version: '11'
-                    check-latest: true
+            -   run: "echo $JAVA_HOME"
+            -   name: Setup JDK 11
+                run: echo "JAVA_HOME=$JAVA_HOME_11_X64" >> $GITHUB_ENV
             -   run: "echo $JAVA_HOME"
             -   name: Run pr check
                 env:
