feat: add Android PullToRefresh
Signed-off-by: Paulo Cesar Meurer <paulo.meurer@zup.com.br>

--- a/android/beagle/build.gradle
+++ b/android/beagle/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     implementation Dependencies.AndroidxLibraries.appcompat
     implementation Dependencies.AndroidxLibraries.coreKtx
     implementation Dependencies.AndroidxLibraries.recyclerView
+    implementation Dependencies.AndroidxLibraries.swipeRefreshLayout
     implementation Dependencies.AndroidxLibraries.viewModel
     implementation Dependencies.AndroidxLibraries.viewModelExtensions
 
