--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -29,6 +29,7 @@ plugins {
     id "io.gitlab.arturbosch.detekt" version "1.17.1" apply false
     id "br.com.zup.beagle.dependencies" apply false
     id "org.jetbrains.dokka" version "1.4.32"
+    id "org.sonarqube" version "3.2.0"
 }
 
 allprojects {
@@ -56,5 +57,22 @@ allprojects {
 
     repositories {
         mavenCentral()
+    }
+
+    afterEvaluate {
+
+        sonarqube {
+            properties {
+                property "sonar.projectKey", "ZupIT_beagle_backend"
+                property "sonar.projectName", "ZupIT_beagle_backend"
+                property "sonar.organization", "t64zgssdey"
+                property "sonar.host.url", "https://sonarcloud.io"
+                property "sonar.exclusions", "sample/**, test/**, annotation/**, widgets-dsl/**, automated-tests/**"
+                property "detekt.sonar.kotlin.config.path", "$rootDir/../config/detekt-default-config.yml"
+                property "sonar.java.coveragePlugin", "jacoco"
+                property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/jacocoTestReportDebug/jacocoTestReportDebug.xml"
+                property "sonar.jacoco.reportPaths", "build/jacoco/testDebugUnitTest.exec,build/jacoco/test.exec"
+            }
+        }
     }
 }
