feat: removes module dependency from Beagle and uses lib import instead (#1629)
* impl

* adjust code

* impl

* formatting

* update

Co-authored-by: Uzias Ferreira <uziasferreira@gmail.com>

--- a/tests/appium/app-android/build.gradle
+++ b/tests/appium/app-android/build.gradle
@@ -18,7 +18,6 @@ buildscript {
     repositories {
         maven { url "https://plugins.gradle.org/m2/" }
         google()
-        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.1'
@@ -36,14 +35,13 @@ plugins {
 }
 
 allprojects {
-    apply from: "$rootDir/../../../detekt.gradle"
-
     apply plugin: "br.com.zup.beagle.dependencies"
     apply plugin: "org.jetbrains.dokka"
 
     repositories {
+        mavenLocal()
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
