--- a/flutter/beagle_components/pubspec.yaml
+++ b/flutter/beagle_components/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: ^4.1.4
+  mockito: 5.0.10
   pedantic: ^1.9.0
 
 # For information on the generic Dart part of this file, see the
