--- a/flutter/beagle/pubspec.yaml
+++ b/flutter/beagle/pubspec.yaml
@@ -11,16 +11,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_js: 0.2.2+0
-  get_it: ^5.0.6
-  shared_preferences: 0.5.12+4
-  url_launcher: ^5.7.10
+  flutter_js: ^0.5.0+0
+  get_it: ^7.1.3
+  shared_preferences: ^2.0.6
+  url_launcher: ^6.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: 4.1.3
-  pedantic: ^1.9.0
+  lints: ^1.0.1
+  mockito: ^5.0.10
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
