refactor: add backend serializer test
Signed-off-by: Paulo Cesar Meurer <paulo.meurer@zup.com.br>

--- a/backend/framework/build.gradle
+++ b/backend/framework/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     testImplementation Dependencies.TestLibraries.mockk
     testImplementation Dependencies.TestLibraries.kotlinTest
     testImplementation Dependencies.TestLibraries.junit5Api
+    testImplementation Dependencies.TestLibraries.junitParams
     testRuntimeOnly Dependencies.TestLibraries.junit5Engine
 }
 
