feat: add Android kapt multi module support
Signed-off-by: Paulo Cesar Meurer <paulo.meurer@zup.com.br>

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,6 +17,9 @@ import br.com.zup.beagle.Dependencies
  */
 
 buildscript {
+    ext {
+        kotlin_version = '1.5.10'
+    }
     repositories {
         maven { url "https://plugins.gradle.org/m2/" }
         google()
